mengubah warna tombol

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </div>
           <h2>Starbucks Coffee</h2>
           <span>$ 12.4</span>
-          <a href="#" class="btn">Order Now</a>
+          <a href="#" class="btn btn-danger tombol">Order Now</a>
           </div>
         </div>
 </div>
@@ -109,7 +109,7 @@
             <h2>Today deserve delivery</h2>
             <p>Starbucks coffee is a drink that is suitable for relaxing and relieving stress. Starbucks has a different taste from other coffees.</p>
             <p>Starbucks delivery is equipped with neat packaging so that it doesn't spill during delivery, and the delivery is still fresh when it arrives because delivery is fast.</p>
-            <a href="#" class="btn btn-success tombol">Order Now</a>
+            <a href="#" class="btn btn-danger tombol">Order Now</a>
           </div>
         </div>
       </section>
