mengubah warna tombol download app

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <h2>50 years of serving communities</h2>
         <p>MORE THAN COFFEE If someone says that Starbucks only uses and roasts quality coffee beans, it's true. That's the essence of everything we do, but it doesn't tell the whole story.</p>
         <p>Starbucks coffee stores have become a beacon for coffee lovers, wherever they are.Because they believe that Starbucks always provides sincere service, a warm atmosphere, and can serve a cup of coffee.</p>
-        <a href="#" class="btn">Learn More</a>
+        <a href="#" class="btn btn-success tombol">Learn More</a>
         </div>
       </div>
     </section>
